--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-server.port=8081
 
+#Server Port
+server.port=8081
+# Spring security username and password
 spring.security.user.name=ravi
 spring.security.user.password=ravi
 
+# Hibernate and Mysql configuration
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:3306/patient_db
 spring.datasource.username=root
 spring.datasource.password=password_123
+
+#Logging level
+#logging.level.root=WARN
+#logging.level.com.ravi.boot.PatientApplication=DEBUG
+#logging.level.org.hibernate=error
+
+#Validation messages
+patient.name.invalid=Invalid Username
