--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.datasource.password=password_123
 
 #Validation messages
 patient.name.invalid=Invalid Username
+
+
+# Multipart upload and download
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
